[package]
name = 'steam_price_tracker'
version = '0.1.0'
authors = ['Mdrokz <mohammadmunshi@gmail.com>']
edition = '2018'

[dependencies]
select = '0.4.3'
scraper = '0.11.0'
serde = '1.0.104'
serde_derive = '1.0.104'
lettre = '0.9.2'
lettre_email = '0.9.2'
chrono = '0.4.10'
postgres-types = '0.1.0'
serde_json = '1.0.48'

[dependencies.tokio-postgres]
version = '0.5.2'
features = ['with-chrono-0_4']

[dependencies.web_api_derive]
path = 'web_api_derive'

[dependencies.reqwest]
version = '0.10.2'
features = ['json']

[dependencies.tokio]
version = '0.2.11'
features = ['full']
